# Clash-Verge-Buty

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/actions/alpha-windows/: action.yml
.github/workflows/: alpha-windows.yml  build-windows-alpha.yml  release-linux.yml  release-windows.yml
docs/: project-structure.md  windows-signing.md
scripts/: check.mjs  portable.mjs  sync-metadata.mjs  sync-version.mjs
src/: index.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: cmds.rs  feat.rs  main.rs
src-tauri/src/config/: clash.rs  config.rs  prfitem.rs  profiles.rs  runtime.rs  verge.rs
src-tauri/src/core/: core.rs  debug_recorder.rs  diagnostic.rs  handle.rs  logger.rs  manager.rs  mod.rs  sidecar.rs  sysopt.rs  tray.rs  win_service.rs
src-tauri/src/enhance/: mod.rs  tun.rs
src-tauri/src/feat/: clash_patch.rs  mod.rs  system_proxy.rs  verge_patch.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  resolve.rs  tmpl.rs
src-tauri/template/: installer.nsi
src-tauri/windows-service-src/: Cargo.toml  README.md
src-tauri/windows-service-src/src/: lib.rs
src/assets/styles/: layout.scss
src/components/base/: base-dialog.tsx  base-notice.tsx
src/components/connection/: connection-table.tsx
src/hooks/: use-clash.ts  use-verge.ts  use-websocket.ts
src/locales/: zh.json
src/pages/: _layout.tsx  _routers.tsx  connections.tsx  logs.tsx  settings.tsx  test.tsx
src/services/: api.ts  cmds.ts  states.ts
src/utils/: controller.ts
(+12 files in other folders)
