[package]
name = "clash-verge-windows-service-src"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "clash-verge-service"
path = "src/bin/clash-verge-service.rs"

[[bin]]
name = "install-service"
path = "src/bin/install-service.rs"

[[bin]]
name = "uninstall-service"
path = "src/bin/uninstall-service.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
once_cell = "1"
windows-service = "0.6"
